# nandam

./: .editorconfig  .env.sample  .gitignore  LICENSE  clean.sh  pyproject.toml
.cursor/: tooling.mdc
backend/: app.py  config.py  pyproject.toml
backend/data/: llm_models.py
backend/domain/: api_chatbot.py  resources.py  thread.py  workspace.py
backend/llm/: anthropic.py  cerebras.py  gemini.py  history.py  litellm.py  message.py  model.py  model_info.py
backend/models/: api_client.py  api_msteams.py  api_system.py  api_workspace.py  bot_persona.py  bot_state.py  exceptions.py  microsoft_teams.py  process_history.py  process_info.py  process_result.py  process_status.py  tool_info.py  workspace_action.py  workspace_state.py  workspace_thread.py
backend/routers/: process.py  thread.py  webapp.py  workspace.py
backend/server/: context.py  lifespan.py  workspace_api.py  workspace_server.py
backend/services/: client_reply.py  kv_store.py  llm.py  threads.py  tools_backend.py
backend/tools/: custom.py
backend/tools/bot/: chat.py
backend/tools/debug/: echo.py
base/: config.py  pyproject.toml
base/api/: documents.py  knowledge.py  utils.py
base/core/: exceptions.py  schema.py  strings.py  unions.py  unique_id.py  values.py
base/models/: content.py  context.py  rendered.py
base/resources/: action.py  aff_body.py  aff_collection.py  aff_file.py  aff_plain.py  bundle.py  label.py  metadata.py  observation.py  relation.py
base/server/: alerting.py  auth.py  lifespan.py  metrics.py  status.py
base/strings/: auth.py  data.py  file.py  microsoft.py  process.py  remote.py  resource.py  scope.py  thread.py
base/utils/: completion.py  markdown.py  sorted_list.py
config/: connectors.sample.yml
docs/: backend.md  connectors.md  documents.md  exceptions.md  knowledge.md  knowledge_fields.md  knowledge_labels.md  models.md  resource.md  server.md
documents/: Dockerfile  app.py  config.py  pyproject.toml
documents/domain/: processing.py
documents/downloaders/: confluence.py  tableau.py  web.py
documents/extractors/: archive.py  conversion.py  excel.py  html_page.py  image.py  pandoc.py  pdf.py  plain_text.py  transcript.py  unstructured.py
documents/models/: exceptions.py  pending.py  processing.py  transcript.py
documents/routers/: read.py
documents/server/: lifespan.py  metrics.py
knowledge/: app.py  config.py  pyproject.toml
knowledge/connectors/: confluence.py  georges.py  github.py  gitlab.py  jira.py  microsoft.py  microsoft_my.py  microsoft_org.py  public.py  qatestrail.py  tableau.py  web.py
knowledge/domain/: aggregates.py  chunking.py  fields.py  gen.py  ingestion.py  labels.py  query.py  refresh.py  resolve.py  search.py  storage.py
knowledge/models/: context.py  exceptions.py  pending.py  storage.py  storage_metadata.py  storage_observed.py  utils.py
knowledge/routers/: aggregate.py  jobs.py  kubernetes.py  query.py  tools.py
knowledge/server/: context.py  lifespan.py  metrics.py  request.py
knowledge/services/: downloader.py  inference.py  storage.py
tests/: conftest.py
tests/backend/: utils_context.py
tests/backend/llm/: test_model_completion.py  test_model_json.py  test_model_request.py
tests/backend/server/: test_context.py
tests/backend/tools/: test_debug_echo.py
tests/base/core/: test_exceptions.py  test_schema.py  test_strings.py  test_unions_const.py  test_unions_mut.py  test_unique_id.py  test_values.py
tests/base/models/: test_content.py  test_rendered.py
tests/base/resources/: test_observation.py  test_relation.py
tests/base/server/: test_auth.py
tests/base/strings/: test_data.py  test_file.py  test_microsoft.py  test_resource.py  test_scope.py
tests/base/utils/: test_completion.py  test_markdown.py  test_sorted_list.py
tests/data/: sample-fragment-2303.11366v2.md  sample-fragment-lotto-6-49.md  samples.py  tools.py
tests/documents/domain/: test_processing.py
tests/documents/downloaders/: test_confluence.py  test_tableau.py
tests/documents/extractors/: test_html_page.py  test_image.py  test_plain_text.py
tests/documents/models/: test_pending.py  test_transcript.py
tests/knowledge/: utils_connectors.py
tests/knowledge/connectors/: test_connector_confluence.py  test_connector_georges.py  test_connector_github.py  test_connector_public.py  test_connector_qatestrail.py  test_connector_tableau.py  test_connector_web.py
tests/knowledge/domain/: test_aggregates.py  test_chunking.py  test_fields.py  test_labels.py
