[project]
name = "nandam-backend"
version = "0.0.0"
description = "Nandam Backend"
authors = []
requires-python = ">=3.14,<3.15"
dependencies = [
  "nandam",
  "nandam-base",
  # Backend-specific dependencies:
  "anthropic>=0.79.0<0.80",
  "botframework-connector>=4.17.1,<5",
  "cerebras-cloud-sdk>=1.67.0<2",
  "fal-client>=0.13.0,<0.14",
  "google-cloud-aiplatform>=1.136.0,<2",
  "msal>=1.34.0,<2",
  "redis[hiredis]>=7.1.0,<8",
  "uvicorn[standard]>=0.40.0,<0.41",
]

[tool.uv.sources]
nandam = { workspace = true }
nandam-base = { workspace = true }
