[project]
name = "nandam-base"
version = "0.0.0"
description = "Nandam shared modules"
requires-python = ">=3.12,<3.13"
dependencies = [
    # No additional dependencies.
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["base"]

[tool.hatch.build]
sources = [".."]
