[project]
name = "nandam-base"
version = "0.0.0"
description = "Nandam shared modules"
requires-python = ">=3.14,<3.15"
dependencies = [
    # No additional dependencies.
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["base"]

[tool.hatch.build]
sources = [".."]
