[project]
name = "nandam-documents"
version = "0.0.0"
description = "Nandam Documents"
requires-python = ">=3.14,<3.15"
dependencies = [
    "nandam",
    "nandam-base",
    # Documents-specific dependencies:
    "beautifulsoup4>=4.14.3,<5",
    "google-genai>=1.62.0,<2",
    "lxml>=6.0.2,<7",
    "markdownify>=1.2.2,<2",
    "matplotlib>=3.10.8,<4",
    "openpyxl>=3.1.5,<4",
    "pandas>=2.3.3,<3",
    "pypandoc-binary>=1.16,<2",
    "pypandoc>=1.16,<2",
    "pypdfium2>=5.3.0,<6",
    "python-magic>=0.4.27,<1",
    "python-multipart>=0.0.22,<1",
    "scrapfly-sdk[concurrency]>=0.8.24,<1",
    "tableau-api-lib>=0.1.50,<1",
]

[tool.uv.sources]
nandam = { workspace = true }
nandam-base = { workspace = true }
